# StoreScrap

./: .gitignore  README.md  build.bat  main.py  pyproject.toml  scrapy.cfg  store_scrap.py
store_scrap/: items.py  pipelines.py  settings.py
store_scrap/spiders/: almanea.py  carrefourksa.py  extra.py  storescrap.py  zagzoog.py
