[tool.poetry]
name = "storescrap"
version = "0.1.0"
description = ""
authors = ["Hamza <hamza.abbad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scrapy = "^2.11.1"
jsonpath-ng = "^1.6.1"
scrapy-xlsx = "^0.1.1"
pyside6 = "^6.7.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
