[tool.poetry]
name = "store_scrap"
version = "0.3.2"
description = ""
authors = ["Hamza <hamza.abbad@gmail.com>"]
packages = [
    { include = "store_scrap", from = "." },
]
include = ["scrapy.cfg", "main.py"]

[tool.poetry.scripts]
store_scrap = "main:run"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scrapy = "^2.11.1"
jsonpath-ng = "^1.6.1"
pyside6 = "^6.7.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
